# foundry-zksync

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: release.yml  test.yml
cli/: Cargo.toml
cli/src/: cast.rs
cli/src/cast/: main.rs
cli/src/forge/: opts.rs
crates/anvil/core/: Cargo.toml
crates/cheatcodes/: Cargo.toml
crates/cheatcodes/src/: inspector.rs  lib.rs
crates/cheatcodes/src/evm/: fork.rs
crates/chisel/: Cargo.toml
crates/chisel/src/: executor.rs
crates/cli/: Cargo.toml
crates/cli/src/forge/: main.rs
crates/common/: Cargo.toml
crates/common/src/: lib.rs  zk_compile.rs  zk_utils.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/debugger/: Cargo.toml
crates/era-cheatcodes/: cheatcodes-debug.rs
crates/era-cheatcodes/src/: cheatcodes.rs  lib.rs  multivm.rs
crates/era-cheatcodes/tests/: test.sh
crates/era-cheatcodes/tests/src/cheatcodes/: Juan.sol  MockCall.t.sol  Warp.t.sol
crates/era-cheatcodes/tests/src/multivm/: Basic.t.sol
crates/era-revm/: Cargo.toml
crates/era-revm/src/: lib.rs  transactions.rs
crates/evm/: Cargo.toml
crates/evm/core/: Cargo.toml
crates/evm/core/src/backend/: fuzz.rs  mod.rs
crates/evm/core/src/era_revm/: transactions.rs
crates/evm/evm/: Cargo.toml
crates/evm/evm/src/executors/: mod.rs  tracing.rs
crates/evm/evm/src/inspectors/: stack.rs
crates/evm/src/: lib.rs
crates/evm/src/executor/: mod.rs
crates/evm/src/executor/backend/: mod.rs
crates/evm/src/trace/: executor.rs
crates/forge/: Cargo.toml
crates/forge/benches/: test_crit.rs
crates/test-utils/src/: util.rs
crates/ui/: Cargo.toml
crates/utils/: Cargo.toml
crates/zkcast/: Cargo.toml
crates/zkcast/src/: lib.rs  tx.rs
crates/zkforge/: Cargo.toml
crates/zkforge/tests/it/: config.rs  core.rs  fork.rs  fuzz.rs  inline.rs  invariant.rs  repros.rs
crates/zksync/compiler/src/zksolc/: mod.rs
