[workspace]
members = [
    "crates/abi/",
    "crates/anvil/",
    "crates/anvil/core/",
    "crates/anvil/rpc/",
    "crates/anvil/server/",
    "crates/binder/",
    "crates/cast/",
    "crates/cheatcodes/",
    "crates/cheatcodes/defs/",
    "crates/chisel/",
    "crates/cli/",
    "crates/common/",
    "crates/config/",
    "crates/debugger/",
    "crates/doc/",
    "crates/evm/core/",
    "crates/evm/coverage/",
    "crates/evm/evm/",
    "crates/evm/fuzz/",
    "crates/evm/traces/",
    "crates/fmt/",
    "crates/forge/",
    "crates/macros/",
    "crates/macros/impl/",
    "crates/test-utils/",
    "crates/utils/",
    "crates/zkcast/",
    "crates/zkforge/",
]
resolver = "2"

[workspace.package]
version = "0.2.0"
edition = "2021"
rust-version = "1.72"
authors = ["Foundry Contributors"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/foundry-rs/foundry"
repository = "https://github.com/foundry-rs/foundry"
exclude = ["benches/", "tests/", "test-data/", "testdata/"]

[profile.dev]
# Disabling debug info speeds up builds a bunch,
# and we don't rely on it for debugging that much
debug = 0

# Speed up tests and dev build
[profile.dev.package]
# solc
foundry-compilers.opt-level = 3
solang-parser.opt-level = 3
serde_json.opt-level = 3

# evm
alloy-primitives.opt-level = 3
alloy-sol-types.opt-level = 3
hashbrown.opt-level = 3
keccak.opt-level = 3
revm-interpreter.opt-level = 3
revm-precompile.opt-level = 3
revm-primitives.opt-level = 3
revm.opt-level = 3
ruint.opt-level = 3
sha2.opt-level = 3
sha3.opt-level = 3
tiny-keccak.opt-level = 3

# keystores
scrypt.opt-level = 3

# forking
axum.opt-level = 3

# Local "release" mode, more optimized than dev but much faster to compile than release
[profile.local]
inherits = "dev"
opt-level = 1
strip = true
panic = "abort"
codegen-units = 16

# Like release, but with full debug symbols and with stack unwinds. Useful for e.g. `perf`.
[profile.debug-fast]
inherits = "release"
debug = true
strip = "none"
panic = "unwind"
incremental = false

# Optimized release profile
[profile.release]
opt-level = 3
lto = "fat"
strip = true
panic = "abort"
codegen-units = 1

# Override packages which aren't perf-sensitive for faster compilation speed
[profile.release.package]
foundry-abi.opt-level = 1
mdbook.opt-level = 1
protobuf.opt-level = 1
rusoto_core.opt-level = 1
rusoto_credential.opt-level = 1
rusoto_kms.opt-level = 1
toml_edit.opt-level = 1
trezor-client.opt-level = 1

[workspace.dependencies]
anvil = { path = "crates/anvil" }
cast = { path = "crates/cast" }
zkcast = { path = "crates/zkcast" }
chisel = { path = "crates/chisel" }
forge = { path = "crates/forge" }
zkforge = { path = "crates/zkforge" }

forge-doc = { path = "crates/doc" }
forge-fmt = { path = "crates/fmt" }
foundry-abi = { path = "crates/abi" }
foundry-binder = { path = "crates/binder" }
foundry-cheatcodes = { path = "crates/cheatcodes" }
foundry-cheatcodes-defs = { path = "crates/cheatcodes/defs" }
foundry-cli = { path = "crates/cli" }
foundry-common = { path = "crates/common" }
foundry-config = { path = "crates/config" }
foundry-debugger = { path = "crates/debugger" }
foundry-evm = { path = "crates/evm/evm" }
foundry-evm-core = { path = "crates/evm/core" }
foundry-evm-coverage = { path = "crates/evm/coverage" }
foundry-evm-fuzz = { path = "crates/evm/fuzz" }
foundry-evm-traces = { path = "crates/evm/traces" }
foundry-macros = { path = "crates/macros" }
foundry-test-utils = { path = "crates/test-utils" }
foundry-utils = { path = "crates/utils" }

# block explorer & verification bindings
foundry-block-explorers = { git = "https://github.com/dutterbutter/block-explorers.git", rev = "880584d3b2e34a65797479e0df783c0d06feea5e" , default-features = false }
# solc & compilation utilities
foundry-compilers = { git = "https://github.com/dutterbutter/compilers.git", rev= "1e5a5ee65b9aaea2e72500b5a6d9ca8defafd37d", default-features = false }

## revm
# no default features to avoid c-kzg
# Using a fork of revm as zksync-era requires the usage of sha3 0.10.6, and the latest revm uses 0.10.8
revm = { version = "3.5.0", default-features = false }
revm-primitives = { version = "1", default-features = false }
era_revm = { git="https://github.com/matter-labs/era-revm", rev = "dc04c89902ea317f3b0e68b80765b5634a4f42b2" }

# We use a fork of `ethers` to gain access to a previously private variable.
# This ensures that all artifact files, freshly compiled and saved in the `output` directory, are publicly accessible.
# For details on this modification, refer to:
# https://github.com/mm-zk/ethers-rs/commit/2b2c7312f328a431fa40a7b87a722eaf28e27061
ethers = { version = "2.0", default-features = false }
ethers-addressbook = { version = "2.0", default-features = false }
ethers-core = { version = "2.0", default-features = false }
ethers-contract = { version = "2.0", default-features = false }
ethers-contract-abigen = { version = "2.0", default-features = false }
ethers-providers = { version = "2.0", default-features = false }
ethers-signers = { version = "2.0", default-features = false }
ethers-middleware = { version = "2.0", default-features = false }
ethers-etherscan = { version = "2.0", default-features = false }
ethers-solc = { version = "2.0", default-features = false }

## alloy
alloy-primitives = "0.4.1"
alloy-dyn-abi = "0.4.1"
alloy-json-abi = "0.4.1"
alloy-sol-types = "0.4.1"
syn-solidity = "0.4.1"

solang-parser = "=0.3.3"

## misc
toml = "0.8"
itertools = "0.11"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
hex = { package = "const-hex", version = "1.6", features = ["hex"] }
protobuf = "=3.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
tracing = "0.1"
jsonpath_lib = "0.3"
eyre = "0.6"
color-eyre = "0.6"

[patch.crates-io]
ethers = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-addressbook = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-core = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-contract = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-contract-abigen = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-providers = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-signers = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-middleware = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-etherscan = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }
ethers-solc = { git = "https://github.com/gakonst/ethers-rs", rev = "4f7b354ecec0aea38ed165560ae4f3224d644c9e" }

#foundry-block-explorers = { git = "https://github.com/foundry-rs/block-explorers" }
foundry-block-explorers = { git = "https://github.com/dutterbutter/block-explorers.git", rev = "880584d3b2e34a65797479e0df783c0d06feea5e" }

alloy-dyn-abi = { git = "https://github.com/alloy-rs/core/" }
alloy-primitives = { git = "https://github.com/alloy-rs/core/" }
alloy-json-abi = { git = "https://github.com/alloy-rs/core/" }
alloy-sol-types = { git = "https://github.com/alloy-rs/core/" }
