[package]
name = "foundry-debugger"

version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
forge.workspace = true
foundry-common.workspace = true
foundry-utils.workspace = true

alloy-primitives.workspace = true

crossterm = "0.26"
eyre = "0.6"
hex = "0.4"
# revm = { version = "3", features = ["std", "serde"] }
revm = {  git = "https://github.com/mm-zk/revm.git", branch = "release_v25_with_old_sha", version = "3", default-features = false, features = [
  "std",
  "serde",
  "memory_limit",
  "optional_eip3607",
  "optional_block_gas_limit",
  "optional_no_base_fee"
] }
tui = { version = "0.19", default-features = false, features = ["crossterm"] }
