[package]
name = "era_revm"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[dependencies]
foundry-cheatcodes = {workspace = true, features = ["impls"]}
foundry-common.workspace = true
crossterm = "0.27"
eyre.workspace = true
tracing.workspace = true
revm.workspace = true

era_test_node = { git = "https://github.com/matter-labs/era-test-node.git", rev = "21b48af90a9f9d98ec38cb93a32c119a3266f401" }
zksync_state = { git = "https://github.com/matter-labs/zksync-era.git", rev = "bd268ac02bc3530c1d3247cb9496c3e13c2e52d9" }
zksync_types = { git = "https://github.com/matter-labs/zksync-era.git", rev = "bd268ac02bc3530c1d3247cb9496c3e13c2e52d9" }
zksync_web3_decl = { git = "https://github.com/matter-labs/zksync-era.git", rev = "bd268ac02bc3530c1d3247cb9496c3e13c2e52d9" }
zksync_utils = { git = "https://github.com/matter-labs/zksync-era.git", rev = "bd268ac02bc3530c1d3247cb9496c3e13c2e52d9" }
multivm.workspace = true
zksync_basic_types.workspace = true


ethabi.workspace = true
itertools.workspace = true
serde.worspace = true
serde_json.worspace = true
hex.worspace = true
ethers.worspace = true
hashbrown.worspace = true

[dev-dependencies]
maplit = "1.0.2"
